--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"express": "^4.14.0",
-		"cors": "^2.8.1",
 		"body-parser": "^1.15.2",
-		"chai": "^3.5.0",
-		"mongodb": "^2.2.16",
-		"chai-http": "^3.0.0",
-		"mocha": "^3.2.0",
-		"zombie": "^5.0.5",
-		"helmet": "^3.1.0"
+		"chai": "^4.1.2",
+		"chai-http": "^4.0.0",
+		"cors": "^2.8.1",
+		"dezalgo": "^1.0.3",
+		"dotenv": "^6.0.0",
+		"express": "^4.14.0",
+		"helmet": "^3.1.0",
+		"joi": "^13.6.0",
+		"mocha": "^5.2.0",
+		"mongodb": "^3.1.3",
+		"mongoose": "^5.2.13",
+		"nodemon": "^1.18.4",
+		"npm-check-updates": "^2.14.2",
+		"zombie": "^6.1.3"
 	},
 	"engines": {
-		"node": "4.4.3"
+		"node": "^8.11.3"
 	},
 	"repository": {
 		"type": "git",
