--- a/package.json
+++ b/package.json
@@ -21,7 +21,15 @@
 		"mongoose": "^5.2.13",
 		"nodemon": "^1.18.4",
 		"npm-check-updates": "^2.14.2",
-		"zombie": "^6.1.3"
+		"zombie": "^6.1.3",
+		"js-yaml": "^3.13.1",
+		"lodash": ">=4.17.12",
+		"set-value": ">=2.0.1",
+		"mixin-deep": ">=1.3.2",
+		"mongoose": ">=5.7.5",
+		"npm": ">=6.13.4",
+		"acorn": ">=5.7.4"
+
 	},
 	"engines": {
 		"node": "^8.11.3"
