--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
 	"description": "What am I about?",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"test": "jest"
 	},
 	"dependencies": {
+		"acorn": ">=5.7.4",
 		"body-parser": "^1.15.2",
 		"chai": "^4.1.2",
 		"chai-http": "^4.0.0",
@@ -15,21 +17,20 @@
 		"dotenv": "^6.0.0",
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
+		"jest": "^26.1.0",
 		"joi": "^13.6.0",
-		"mocha": "^5.2.0",
-		"mongodb": "^3.1.3",
-		"mongoose": "^5.2.13",
-		"nodemon": "^1.18.4",
-		"npm-check-updates": "^2.14.2",
-		"zombie": "^6.1.3",
 		"js-yaml": "^3.13.1",
 		"lodash": ">=4.17.12",
-		"set-value": ">=2.0.1",
 		"mixin-deep": ">=1.3.2",
+		"mocha": "^5.2.0",
+		"mongodb": "^3.1.3",
 		"mongoose": ">=5.7.5",
+		"node-fetch": "^2.6.0",
+		"nodemon": "^1.18.4",
 		"npm": ">=6.13.4",
-		"acorn": ">=5.7.4"
-
+		"npm-check-updates": "^2.14.2",
+		"set-value": ">=2.0.1",
+		"zombie": "^6.1.3"
 	},
 	"engines": {
 		"node": "^8.11.3"
